# place-bot

./: Cargo.toml
.github/workflows/: rust.yml
src/: main.rs  pixel.rs  template.rs
