[package]
name = "place-bot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
arti-client = "0.9.2"
async-trait = "0.1.72"
clap = { version = "4.3.17", features = ["derive"] }
deadpool = "0.9.5"
enum-display-derive = "0.1.1"
png = "0.17.9"
reqwest = { version = "0.11.18", features = ["json", "tokio-rustls"] }
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["full"] }
tokio-util = "0.7.8"
